add:product CRUD endpoint
