# internal/model/category.go
@@ -5,5 +5,5 @@ type Category struct {
 	Name          string     `json:"name" example:"Laptop"`
 	Slug          string     `json:"slug" example:"laptop"`
 	ParentID      *string    `json:"-"`
-	SubCategories []Category `json:"sub_categories,omitempty" swaggertype:"array" example:"[{\"id\":\"2\",\"name\":\"Gaming Laptop\",\"slug\":\"gaming-laptop\"}]"`
+	SubCategories []Category `json:"sub_categories,omitempty"`
 }
